syntax = "proto3";

option go_package = "github.com/hackaTUM/backend/proto";

message Stonk { string name = 1; }

message StonkRequest { string name = 1; }

service StonkServer {
  rpc GetStonkByName(StonkRequest) returns (Stonk) {}
}